--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,12 +40,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-area="" asp-controller="Assignment6_1" asp-action="Module5" asp-route-id="0">Assignment 6.1</a>
-
-                                <!--
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                                -->
+                                <a class="dropdown-item" asp-area="" asp-controller="Olympics" asp-action="Countries" >Olympics Assignment</a>
                             </div>
                         </li>
                     </ul>
