--- a/Views/Olympics/Countries.cshtml
+++ b/Views/Olympics/Countries.cshtml
@@ -12,7 +12,9 @@
                    asp-route-activeGame="@game.GameID"
                    asp-route-activeSport="@Model.ActiveSport"
                    class="list-group-item
-                       @Model.CheckActiveGame(game.GameID)">@game.Name</a>
+                       @Model.CheckActiveGame(game.GameID)">
+                    @game.Name
+                </a>
                 }
         </div>
         <h3 class="mt-3">Sport / Type</h3>
@@ -23,29 +25,25 @@
                    asp-route-activeGame="@Model.ActiveGame"
                    asp-route-activeSport="@sport.SportID"
                    class="list-group-item
-                       @Model.CheckActiveSport(sport.SportID)">@sport.Name</a>
+                       @Model.CheckActiveSport(sport.SportID)">
+                    @sport.Name
+                </a>
                 }
         </div>
     </div>
     <div class="col-sm-9">
-        <ul class="list-inline">
-            @foreach (Country country in Model.Countries)
-            {
-                <li class="list-inline-item">
-                    <form asp-action="Details" method="post">
-                        <button type="submit" class="bg-white border-0">
+        <div class="col-sm-9">
+            <ul class="list-inline">
+                @foreach (Country country in Model.Countries)
+                {
+                    <li class="list-inline-item">
+                        <a asp-action="Details" asp-route-id="@country.CountryID">
                             <img src="~/images/@country.LogoImage" alt="@country.Name"
-                                 data-toggle="tooltip"
-                                 data-placement="bottom"
-                                 title="@country.Name | @country.Game.Name | @country.Sport.Name" />
-                        </button>
-
-                        <input type="hidden" asp-for="@country.CountryID" />
-                        <input type="hidden" asp-for="ActiveGame" />
-                        <input type="hidden" asp-for="ActiveSport" />
-                    </form>
-                </li>
-            }
-        </ul>
+                                 title="@country.Name | @country.Game.Name @country.Sport.Name" />
+                        </a>
+                    </li>
+                }
+            </ul>
+        </div>
     </div>
 </div>
